// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TurtleEnableBar should match snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 15%;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  overflow-x: auto;
  -webkit-align-content: space-between;
  -ms-flex-line-pack: space-between;
  align-content: space-between;
  border-style: solid;
  border-width: 0rem 0rem 0.2rem 0rem;
  margin-bottom: 0.2rem;
  background: #ededed;
}

@media (min-width:768px) {
  .c0 {
    width: 80%;
    margin: 2rem auto 1rem auto;
    border-width: 0;
  }
}

<div
  className="c0"
/>
`;

exports[`TurtleEnableBar should render all turtles as <TurtleEnableButton /> components 1`] = `
.c1 {
  border-style: solid;
  border-color: #ededed;
  background-color: #ededed;
  font-size: 4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2rem;
  min-width: 7rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 15%;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  overflow-x: auto;
  -webkit-align-content: space-between;
  -ms-flex-line-pack: space-between;
  align-content: space-between;
  border-style: solid;
  border-width: 0rem 0rem 0.2rem 0rem;
  margin-bottom: 0.2rem;
  background: #ededed;
}

@media (min-width:768px) {
  .c0 {
    width: 80%;
    margin: 2rem auto 1rem auto;
    border-width: 0;
  }
}

<TurtleEnableBar
  onTurtleEnableChange={[Function]}
  turtles={
    Array [
      Object {
        "enabled": false,
        "id": "1",
      },
      Object {
        "enabled": false,
        "id": "2",
      },
      Object {
        "enabled": false,
        "id": "3",
      },
    ]
  }
>
  <styled.div>
    <div
      className="c0"
    >
      <TurtleEnableButton
        enabled={false}
        id="1"
        key="1"
        onTurtleEnableChange={[Function]}
      >
        <styled.button
          isActive={false}
          onClick={[Function]}
        >
          <button
            className="c1"
            onClick={[Function]}
          >
            1
          </button>
        </styled.button>
      </TurtleEnableButton>
      <TurtleEnableButton
        enabled={false}
        id="2"
        key="2"
        onTurtleEnableChange={[Function]}
      >
        <styled.button
          isActive={false}
          onClick={[Function]}
        >
          <button
            className="c1"
            onClick={[Function]}
          >
            2
          </button>
        </styled.button>
      </TurtleEnableButton>
      <TurtleEnableButton
        enabled={false}
        id="3"
        key="3"
        onTurtleEnableChange={[Function]}
      >
        <styled.button
          isActive={false}
          onClick={[Function]}
        >
          <button
            className="c1"
            onClick={[Function]}
          >
            3
          </button>
        </styled.button>
      </TurtleEnableButton>
    </div>
  </styled.div>
</TurtleEnableBar>
`;
